--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
 
-    <p>Ривном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и CSS</a>».</p>
+
+
+    <p>Ривном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive">Базовый HTML и Прям CSS</a>».</p>
 
   </body>
 </html>
